# liblifx

./: .gitignore  CMakeLists.txt  README.md
examples/: async.c  findbulbs.c  getalot.c  sendreq.c  setcolor.c
include/: lifx.h  lifx_common.h  lifx_defines.h  lifx_encoders.h  lifx_enums.h  lifx_fields.h  lifx_internal.h  lifx_packets.h  lifx_private.h  lifx_requests.h  lifx_version.h.in
include/platform/: platform_linux.h  platform_macosx.h  platform_maxosx.h  platform_windows.h
src/: lifx.c  lifx_buffer.c  lifx_encoders.c  lifx_log.c  lifx_platform_posix.c  lifx_platform_windows.c  lifx_product_db.c  lifx_requests.c  lifx_session.c
tests/: CMakeLists.txt  lifxBufferTests.cpp  lifxDeviceIdTests.cpp  main.cpp
tools/: lifx.cpp  lxcodegen.py  lxdbgen.py
